--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Voo
 
-0.01    Date/time
+0.02    2022-08-07
+        Added feature 'lexical_subs' and base perl version required.
+
+0.01    2022-08-07
         First version, released on an unsuspecting world.
 
